--- a/CNN/CNN.ipynb
+++ b/CNN/CNN.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -106,29 +106,29 @@
     }
    ],
    "source": [
-    "\"\"\" # 设置原始文件夹路径和目标文件夹路径\n",
+    "\"\"\" # path\n",
     "src_folder = \"./data/chest_xray\"\n",
     "dst_folder = os.path.join(src_folder, \"mix\")\n",
     "\n",
-    "# 定义目标分类文件夹的路径\n",
+    "# destination path\n",
     "normal_dst = os.path.join(dst_folder, \"normal\")\n",
     "pneumonia_dst = os.path.join(dst_folder, \"pneumonia\")\n",
     "\n",
-    "# 创建 mix/normal 和 mix/pneumonia 文件夹（如果不存在）\n",
+    "# create mix/normal and mix/pneumonia files (if not exist)\n",
     "os.makedirs(normal_dst, exist_ok=True)\n",
     "os.makedirs(pneumonia_dst, exist_ok=True)\n",
     "\n",
-    "# 遍历 train、val 和 test 文件夹，将 normal 和 pneumonia 文件夹中的文件移动到目标文件夹中\n",
+    "# move files in normal and pneumonia files\n",
     "for category in [\"train\", \"val\", \"test\"]:\n",
     "    for label in [\"normal\", \"pneumonia\"]:\n",
     "        src_path = os.path.join(src_folder, category, label)\n",
     "        \n",
-    "        # 检查路径是否存在\n",
+    "        # check if the path exists\n",
     "        if os.path.exists(src_path):\n",
     "            for filename in os.listdir(src_path):\n",
     "                src_file = os.path.join(src_path, filename)\n",
     "                \n",
-    "                # 将文件移动到 mix 的相应分类文件夹\n",
+    "                # move files to relative folders in mix\n",
     "                if label == \"normal\":\n",
     "                    shutil.move(src_file, normal_dst)\n",
     "                elif label == \"pneumonia\":\n",
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
     }
    ],
    "source": [
-    "# 判断是否存在梯度消失（gradient vanish）\n",
+    "# if gradient vanish exists?\n",
     "for name, param in model.named_parameters():\n",
     "    if param.grad is not None:\n",
     "        print(f\"{name} gradient mean: {param.grad.abs().mean().item()}\")"
